# cob_common

./: .gitignore  .gitmodules  .travis.rosinstall.melodic  .travis.xacro_test.sh  .travis.yml  README  README.md  empty_node.cpp  rosdep.yaml  stack.xml
brics_actuator/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_actions/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
cob_actions/action/: Dock.action  JointCommand.action  JointTrajectory.action  Move.action  MoveTrajectory.action  SetBool.action  SetFloat.action  SetInt.action  SetString.action
cob_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_description/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.orig  mainpage.dox  manifest.xml  package.xml
cob_description/calibration/: cob3-3.urdf.xacro  cob3-4.urdf.xacro
cob_description/gazebo/: gazebo.urdf.xacro
cob_description/meshes/: unit_cylinder.stl  unit_sphere.stl
cob_description/meshes/base/: base.stl  base_collision.stl  cob_wheel.stl  pr2_wheel.stl
cob_description/meshes/cob3_base/: base.stl  base_collision.stl  cob_wheel.stl
cob_description/meshes/cob3_torso/: head_cover.stl  head_cover_collision.stl  lower_neck_collision.stl
cob_description/meshes/cob3_tray/: tray.stl
cob_description/meshes/cob3_tray_3DOF/: tray_link_1.stl  tray_link_2.stl  tray_link_3.stl
cob_description/meshes/cob4_base/: base_collision.stl  base_link.stl  base_reduced.stl
cob_description/meshes/cob4_gripper/: finger_1.dae  finger_1.stl  finger_2.dae  finger_2.stl  palm.dae  palm.stl
cob_description/meshes/cob4_head/: head_link.dae  head_link.stl  head_link_collision.stl
cob_description/meshes/cob4_torso/: torso_link.dae  torso_link.stl  torso_link_collision.stl
cob_description/meshes/drive_wheel/: wheel.dae  wheel.stl
cob_description/meshes/lbr/: joint_1.stl  joint_1_collision.stl  joint_2.stl  joint_2_collision.stl  joint_3.stl  joint_3_collision.stl  joint_4.stl  joint_4_collision.stl  joint_5.stl  joint_5_collision.stl  joint_6.stl  joint_6_collision.stl  joint_7.stl  joint_7_collision.stl  lbr1.stl  lbr6.stl  lbr_offsets.txt
cob_description/meshes/lbr_v0/: joint_4_collision.stl  lbr2.stl  lbr5.stl
cob_description/meshes/sensors/: realsense_d435.stl  rplidar.dae  sick_microscan3.stl  sick_s300_laser.dae  sick_s300_laser.stl  sick_s300_laser_collision.stl
cob_description/meshes/torso/: head_cover_collision.stl  lower_neck.stl  upper_neck.stl  upper_neck_collision.stl
cob_description/meshes/torso_v0/: head_cover.stl  tray.stl  upper_neck_collision.stl
cob_description/meshes/tray/: tray.stl  tray_collision.stl
cob_description/meshes/tray_powerball/: tray_link_1.stl  tray_link_2.stl  tray_link_3.stl
cob_description/meshes/ur_connector/: ur_connector1.stl  ur_connector2.stl
cob_description/robots/: base.urdf.xacro  cob3-1.urdf.xacro  cob3-3.urdf.xacro  cob3-4.urdf.xacro  cob3-bosch.urdf.xacro  cob3_no_arm.urdf.xacro  desire.urdf.xacro  lbr_sdh.urdf.xacro  lbr_voxelization.urdf.xacro  upload_lbr.launch
cob_description/ros/calibration/: cob3-1.urdf.xacro  cob3-2.urdf.xacro  cob3-3.urdf.xacro  cob3-4.urdf.xacro  cob3-lbr.urdf.xacro  cob3-sim.urdf.xacro
cob_description/ros/launch/: cob3-sim.launch  cob_platform.launch
cob_description/ros/robots/: arm.urdf.xacro  arm_sdh.urdf.xacro  cob3-1.urdf.xacro  cob3-2.urdf.xacro  cob3-3.urdf.xacro  cob3-4.urdf.xacro  cob3-lbr.urdf.xacro  cob3-sim.urdf.xacro  cob3.urdf.xacro  cob3_arm.urdf.xacro  cob3_no_arm.urdf.xacro  cob_platform.urdf.xacro  icob.urdf.xacro  lbr.urdf.xacro  lbr_sdh.urdf.xacro  lbr_voxelization.urdf.xacro  sdh.urdf.xacro  upload_arm.launch  upload_arm_sdh.launch  upload_base.launch  upload_cob3-1.launch  upload_cob3-2.launch  upload_cob3-sim.launch  upload_cob3-sim_base.launch  upload_cob3.launch  upload_cob3_no_arm.launch  upload_robot.launch  upload_sdh.launch
cob_description/ros/urdf/: common.xacro  materials.urdf.xacro
cob_description/test/: test_urdf.cpp  test_urdf.py  urdf.test
cob_description/urdf/: common.xacro  materials.urdf.xacro
cob_description/urdf/base/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro
cob_description/urdf/base_cob3/: base.gazebo.xacro  base.urdf.xacro
cob_description/urdf/base_cob4/: base.gazebo.xacro  base.urdf.xacro
cob_description/urdf/base_placement/: base_placement.urdf.xacro
cob_description/urdf/base_vbosch/: base.urdf.xacro
cob_msgs/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
cob_msgs/action/: Move.action  Script.action
cob_msgs/msg/: AccessPoint.msg  BatteryServer.msg  BatteryServer2.msg  BatteryState.msg  ColoredPointCloud.msg  DashboardState.msg  Detection.msg  DetectionArray.msg  EmergencyStopState.msg  FullIKSolution.msg  GraspDefinition.msg  HornMode.msg  JointCommand.msg  Light.msg  Mask.msg  MaskArray.msg  ObjectInstance.msg  PersonHypothesis.msg  PersonList.msg  PowerBoardState.msg  PowerState.msg  ReprojectionMatrix.msg  SafetyControllerState.msg  ScriptState.msg  SiteSurvey.msg  TactileMatrix.msg  TactileSensor.msg  Transformation.msg
cob_srvs/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
cob_srvs/srv/: AcquireObjectImage.srv  BuildRoadmap.srv  DetectObjects.srv  Dock.srv  GetCameraInfo.srv  GetColoredPointCloud.srv  GetEnvModel.srv  GetFullIKSolutions.srv  GetPlatformPosition.srv  GetPointCloud2.srv  GetPose.srv  GetPoseStampedTransformed.srv  GetPositionIKExtended.srv  GetTransformCamera2Base.srv  GetTransformCamera2BasePoint.srv  GraspObject.srv  LoadRoadmap.srv  MoveCart.srv  MoveNeck.srv  OptimizePlatformPose.srv  SetDefaultVel.srv  SetFloat.srv  SetHornMode.srv  SetInt.srv  SetJointStiffness.srv  SetJointTrajectory.srv  SetMaxVel.srv  SetOperationMode.srv  SetString.srv  Shutdown.srv  Switch.srv  TrainObject.srv  Trigger.srv  UpdateVoxelModel.srv
cob_srvs/test/: init_test.py
cob_vision_utils/: CMakeLists.txt  CMakeLists.txt.backup_for_dpkg  manifest.xml
desire_description/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
raw_description/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
(+580 files in other folders)
