<package format="2">
  <name>cob_actions</name>
  <version>0.7.7</version>
  <description>This Package contains Care-O-bot specific action definitions.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_actions</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="felixmessmer@gmail.com">Felix Messmer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
