<package format="3">
  <name>cob_msgs</name>
  <version>0.6.9</version>
  <description>
    Messages for representing state information, such as battery information and emergency stop status.
  </description>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>
  <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>

  <license>Apache 2.0</license>

 


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <test_depend>ament_lint_common</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


