<package format="2">
  <name>cob_msgs</name>
  <version>0.7.8</version>
  <description>
    Messages for representing state information, such as battery information and emergency stop status.
  </description>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>
  <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>

</package>
