<package>
  <name>cob_srvs</name>
  <version>0.5.2</version>
  <description>This Package contains Care-O-bot specific service definitions.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_srvs</url>
  <!-- <url type="bugtracker"></url> -->


  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
