<package format="2">
  <name>cob_srvs</name>
  <version>0.7.8</version>
  <description>This Package contains Care-O-bot specific service definitions.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_srvs</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>

</package>
