<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raw_description</name>
  <version>2.7.9</version>
  <description>This package contains the description (mechanical, kinematic, visual,
  etc.) of the Care-O-bot robot. The files in this package are parsed and used by
  a variety of other components. Most users will not interact directly
  with this package.</description>
  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_description</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="jba@ipa.fhg.de">Jannik Abbenseth</maintainer>
  <author email="aub@ipa.fhg.de">Alexander Bubeck</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cob_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
